--- a/src/blocks/registration/__inpit/registration__input.css
+++ b/src/blocks/registration/__inpit/registration__input.css
@@ -1,11 +1,11 @@
-.registration__input{
+.registration__input {
   margin: 50px auto 30px;
   background-color: transparent;
   padding: 0;
   width: 100%;
   height: 26px;
   border: none;
-  border-bottom: 1px solid #CCCCCC;
+  border-bottom: 1px solid #cccccc;
   color: white;
   font-size: 14px;
   font-weight: 400;
